[package]
name = "chongyoucar"
version = "0.1.0"
edition = "2021"
authors = ["李扬(Leon) <echo_ai@foxmail.com>"]
description = "realman robot Rust SDK"
license = "MIT"
repository = "https://github.com/EchoRust/chongyoucar"
documentation = "https://docs.rs/chongyoucar"
homepage = "https://github.com/EchoRust/chongyoucar"
keywords = ["chongyoucar", "robot"]

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serial = "0.4.0"
thiserror = "1.0.63"
